--- a/catalogo.html
+++ b/catalogo.html
@@ -11,15 +11,15 @@
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
    <!-- Estilos -->
-  <link rel="stylesheet" href="../styles/index.css">
-  <link rel="stylesheet" href="../styles/auto-card.css">
-  <link rel="stylesheet" href="../styles/navbar.css">
-  <link rel="stylesheet" href="../styles/catalogo.css">
-  <link rel="stylesheet" href="../styles/filtros.css">
-  <link rel="stylesheet" href="../styles/footer.css">
-  <link rel="stylesheet" href="../styles/forms-catalogo.css">
-  <link rel="stylesheet" href="../styles/swal-edit.css">
-  <link rel="shortcut icon" href="../imgs/favicon.jpg">
+  <link rel="stylesheet" href="styles/index.css">
+  <link rel="stylesheet" href="styles/auto-card.css">
+  <link rel="stylesheet" href="styles/navbar.css">
+  <link rel="stylesheet" href="styles/catalogo.css">
+  <link rel="stylesheet" href="styles/filtros.css">
+  <link rel="stylesheet" href="styles/footer.css">
+  <link rel="stylesheet" href="styles/forms-catalogo.css">
+  <link rel="stylesheet" href="styles/swal-edit.css">
+  <link rel="shortcut icon" href="imgs/favicon.jpg">
   <title>Catálogo de autos - GL Concesionaria</title>
 </head>
 <body>
@@ -60,13 +60,13 @@
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="../imgs/banners/banner-peugeot-208.jpg" class="d-block w-100" alt="...">
+        <img src="imgs/banners/banner-peugeot-208.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="../imgs/banners/banner-renault-alaskan.jpg" class="d-block w-100" alt="...">
+        <img src="imgs/banners/banner-renault-alaskan.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="../imgs/banners/banner-chevrolet-cruze.jpg" class="d-block w-100" alt="...">
+        <img src="imgs/banners/banner-chevrolet-cruze.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -282,7 +282,7 @@
       <div class="box">
         <figure>
           <a href="#">
-            <img src="../imgs/common/LOGO-fondoOscuropng.png">
+            <img src="imgs/common/LOGO-fondoOscuropng.png">
           </a>
         </figure>
       </div>
@@ -315,9 +315,9 @@
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <!--Bootstrap:-->
   <script type="module" src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  <script src="../js/catalogo.js"></script>
-  <script src="../js/front-catalogo.js"></script>
-  <script src="../js/form-contacto.js"></script>
-  <script src="../js/form-test-drive.js"></script>
+  <script src="js/catalogo.js"></script>
+  <script src="js/front-catalogo.js"></script>
+  <script src="js/form-contacto.js"></script>
+  <script src="js/form-test-drive.js"></script>
 </body>
 </html>
