--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <!-- Estilos -->
-  <link rel="stylesheet" href="../styles/index.css">
-  <link rel="stylesheet" href="../styles/navbar.css">
-  <link rel="stylesheet" href="../styles/header.css">
-  <link rel="stylesheet" href="../styles/nosotros.css">
-  <link rel="stylesheet" href="../styles/contacto.css">
-  <link rel="stylesheet" href="../styles/footer.css">
-  <link rel="stylesheet" href="../styles/auto-animado.css">
-  <link rel="shortcut icon" href="../imgs/favicon.jpg">
+  <link rel="stylesheet" href="styles/index.css">
+  <link rel="stylesheet" href="styles/navbar.css">
+  <link rel="stylesheet" href="styles/header.css">
+  <link rel="stylesheet" href="styles/nosotros.css">
+  <link rel="stylesheet" href="styles/contacto.css">
+  <link rel="stylesheet" href="styles/footer.css">
+  <link rel="stylesheet" href="styles/auto-animado.css">
+  <link rel="shortcut icon" href="imgs/favicon.jpg">
   <title>GL Concesionaria - Autos nuevos y usados</title>
 </head>
 <body>
@@ -66,7 +66,7 @@
           <div class="container carousel-text">
             <h5>Comprá el auto 0km<br>de tus sueños</h5>
             <a class="boton-outline" href="catalogo.html">Ver autos 0kms</a>
-            <img src="../imgs/common/LOGO-fondoOscuropng.png" alt="">
+            <img src="imgs/common/LOGO-fondoOscuropng.png" alt="">
           </div>
         </div>
       </div>
@@ -75,7 +75,7 @@
           <div class="container carousel-text">
             <h5>Comprá la confiabilidad<br>de un auto usado</h5>
             <a class="boton-outline" href="catalogo.html">Ver autos usados</a>
-            <img src="../imgs/common/LOGO-fondoOscuropng.png" alt="">
+            <img src="imgs/common/LOGO-fondoOscuropng.png" alt="">
           </div>
         </div>
       </div>
@@ -93,18 +93,18 @@
        
       </div>
       <div class="card-imagen">
-        <img src="../imgs/common/LOGO-fondoOscuropng.png" alt="">
+        <img src="imgs/common/LOGO-fondoOscuropng.png" alt="">
       </div>
     </article>
 
     <article class="marcas-container">
       <h2>Marcas lideres para tu elección ideal</h2>
       <div class="container">
-        <img class="marcas" src="../imgs/common/marcas/renault-logo.svg" alt="">
-        <img class="marcas" src="../imgs/common/marcas/peugeot-new-2021-seeklogo.com-3.svg" alt="">
-        <img class="marcas" src="../imgs/common/marcas/Chevrolet.svg" alt="">
-        <img class="marcas" src="../imgs/common/marcas/volkswagen-logo.svg" alt="">
-        <img class="marcas" src="../imgs/common/marcas/fiat-vector-logo.svg" alt="">
+        <img class="marcas" src="imgs/common/marcas/renault-logo.svg" alt="">
+        <img class="marcas" src="imgs/common/marcas/peugeot-new-2021-seeklogo.com-3.svg" alt="">
+        <img class="marcas" src="imgs/common/marcas/Chevrolet.svg" alt="">
+        <img class="marcas" src="imgs/common/marcas/volkswagen-logo.svg" alt="">
+        <img class="marcas" src="imgs/common/marcas/fiat-vector-logo.svg" alt="">
       </div>
     </article>
   </section>
@@ -113,7 +113,7 @@
     <h2>Esperamos tu consulta</h2>
   </div>
   <div class="auto-animado-container">
-    <img class="auto-animado" src="../imgs/common/left-car.png" alt="">
+    <img class="auto-animado" src="imgs/common/left-car.png" alt="">
   </div>
 
   <span id="contacto"></span>
@@ -124,7 +124,7 @@
   <!--Formulario-->
   <section class="container-fluid contacto">
     <div class="img-form">
-      <img src="../imgs/common/contacto.jpg">
+      <img src="imgs/common/contacto.jpg">
     </div>
     <div class="form-input">
       <form class="form-contacto" id="form-contacto">
@@ -176,7 +176,7 @@
       <div class="box">
         <figure>
           <a href="#">
-            <img src="../imgs/common/LOGO-fondoOscuropng.png">
+            <img src="imgs/common/LOGO-fondoOscuropng.png">
           </a>
         </figure>
       </div>
@@ -209,8 +209,8 @@
   <script type="module" src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <!--Sweet Alert:-->
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="../js/form-contacto.js"></script>
-  <script src="../js/navbar.js"></script>
-  <script src="../js/animacion-auto.js"></script>
+  <script src="js/form-contacto.js"></script>
+  <script src="js/navbar.js"></script>
+  <script src="js/animacion-auto.js"></script>
 </body>
 </html>
