--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <nav class="navbar navbar-expand-lg bg-navbar-top navbar-edit">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img class="logo" src="../imgs/common/LOGO-Horizontal-fondoOscuro.png" alt="brand">
+        <img class="logo" src="imgs/common/LOGO-Horizontal-fondoOscuro.png" alt="brand">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon icon-burger">
