--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
         <span class="navbar-toggler-icon icon-burger">
           <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-list .icon-burger" viewBox="0 0 16 16">
           <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
-        </svg>
-      </span>
+          </svg>
+        </span>
+      </button>
       <div class="collapse navbar-collapse d" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
